@@ -1,13 +1,18 @@
 package com.scholarly.utme.viewmodels.note_screens;
 
+import com.google.gson.Gson;
 import com.scholarly.utme.controller.note_screens.NotesScreenController.InitialData;
 import com.scholarly.utme.data.dao.ObjectiveQuestionDao;
 import com.scholarly.utme.data.dao.SubjectDao;
+import com.scholarly.utme.network.model.UserData;
+import com.scholarly.utme.data.model.newDb.NoteLastSession;
 import com.scholarly.utme.data.dao.newDb.SectionDao;
+import com.scholarly.utme.data.dao.newDb.SubTopicDao;
 import com.scholarly.utme.data.model.Highlights;
 import com.scholarly.utme.data.model.Note;
 import com.scholarly.utme.data.model.ObjectiveQuestion;
 import com.scholarly.utme.data.model.newDb.*;
+import com.scholarly.utme.util.PreferencesManager;
 import de.saxsys.mvvmfx.ViewModel;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.collections.FXCollections;
@@ -15,42 +20,71 @@ import javafx.collections.ObservableList;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.scholarly.utme.util.Constants.PREF_KEY_USER_DATA;
+import static com.scholarly.utme.util.Constants.PREF_KEY_USER_ID;
 
 public class NotesScreenVM implements ViewModel {
     private static final String TAG = "NotesScreenVM: ";
 
     NoteSubject subject;
-    NoteTopic topic;
-    ObservableList<NoteSubTopic> subTopics = FXCollections.observableArrayList();
+    NoteTopic noteTopic;
+    ObservableList<NoteTopic> noteTopics = FXCollections.observableArrayList();
+    SimpleObjectProperty<NoteTopic> selectedTopic = new SimpleObjectProperty<>(null);
     SimpleObjectProperty<NoteSubTopic> selectedSubTopic = new SimpleObjectProperty<>(null);
+    SimpleObjectProperty<NoteSection> selectedSubtopicSection = new SimpleObjectProperty<>(null);
+    SimpleObjectProperty<Integer> selectedTopicIndex = new SimpleObjectProperty<>(null);
+    SimpleObjectProperty<NoteSection> selectedSection = new SimpleObjectProperty<>(null);
 
+    HashMap<Integer, ObservableList<NoteSubTopic>> subTopics = new HashMap<>();
     HashMap<Integer, ObservableList<Section>> subTopicSections = new HashMap<>();
     HashMap<Integer, ObservableList<NoteSection>> noteSections = new HashMap<>();
     ObservableList<Highlights> subjectHighlights = FXCollections.observableArrayList();
     ObservableList<Note> subjectNotes = FXCollections.observableArrayList();
     ObservableList<ObjectiveQuestion> noteSubjectQuestions = FXCollections.observableArrayList();
 
-    public NotesScreenVM() {}
+
+    Gson gson = new Gson();
+
+    private final UserData userData;
+    private final String userId;
+
+    public NotesScreenVM() {
+        userId = PreferencesManager.get(PREF_KEY_USER_ID, "");
+        String userDataString = PreferencesManager.get(PREF_KEY_USER_DATA+userId, "");
+
+        userData = gson.fromJson(userDataString, UserData.class);
+    }
 
     public void initialize(InitialData data) {
         subject = data.getSubject();
-        topic = data.getTopic();
+        noteTopics.addAll(data.getTopics());
+        noteTopic = data.getSelectedNoteTopic();
+        selectedTopic.set(noteTopic);
         selectedSubTopic.set(data.getSelectedSubTopic());
-        subTopics.addAll(data.getSubTopics());
-        noteSubjectQuestions.addAll(ObjectiveQuestionDao.getQuestionsWithNoteSubjectId(getPQSubjectId(data.getSubject().getSubjectId())));
-//        System.out.println(TAG + "Got Subtopics -> " + Helper.toString(subTopics));
+        selectedSection.set(data.getSelectedSection());
+//        subTopics.addAll(data.getSubTopics());
+//        System.out.println(TAG + "Got questions for subject with id -> " + getPQSubjectId(data.getSubject().getSubjectId()) + ObjectiveQuestionDao.getQuestionsWithNoteSubjectId(getPQSubjectId(data.getSubject().getSubjectId())));
+//        noteSubjectQuestions.addAll(ObjectiveQuestionDao.getQuestionsWithNoteSubjectId(getPQSubjectId(data.getSubject().getSubjectId())));
 
-        subTopics.forEach(subTopic -> {
-//            subTopicSections.put(subTopic.getId(), SectionDao.getSections("note_" + subject.getTableName() + "_sections", subTopic.getSectionId()));
-//            noteSections.put();
-//            subjectHighlights = HighlightsDao.getHighlights("note_" + subject.getTableName() + "_sections");
-//            subjectNotes = NoteDao.getNotes("note_" + subject.getTableName() + "_sections");
+        selectedTopicIndex.set(data.getSelectedNoteTopic().getOrder()-1);
+
+        noteTopics.forEach(topic -> {
+            noteSections.put(topic.getId(), SectionDao.getNoteSectionsWithTopicId(topic.getId()));
+            subTopics.put(topic.getId(), SubTopicDao.getSubTopicsForTopic(topic.getId()));
         });
 
-        noteSections.put(topic.getId(), SectionDao.getNoteSectionsWithTopicId(topic.getId()));
+        if (selectedSubTopic.get() != null) {
+            List<NoteSection> selectedNoteSection = noteSections.get(selectedTopic.get().getId()).stream().filter(section -> section.getSubtopicId() == selectedSubTopic.get().getId()).toList();
+//            System.out.println(TAG + "SelectedSubtopic Section -> " + selectedNoteSection);
+            selectedSubtopicSection.set(selectedNoteSection.get(0));
+        }
     }
 
+    public void putLastSession(NoteLastSession lastSession) {
+        int id = SectionDao.insertLastSection(lastSession);
+        System.out.println(TAG + "Inserted last session with id -> " + id);
+    }
 
 //    public void handleHighlight(Section selectedSection, String colorCode) {
 //
@@ -88,31 +122,73 @@ public class NotesScreenVM implements ViewModel {
     }
 
     public NoteTopic getTopic() {
-        return topic;
+        return noteTopic;
     }
 
-    public void setTopic(NoteTopic topic) {
-        this.topic = topic;
+    public void setNoteTopic(NoteTopic noteTopic) {
+        this.noteTopic = noteTopic;
     }
 
-    public ObservableList<NoteSubTopic> getSubTopics() {
+    public HashMap<Integer, ObservableList<NoteSubTopic>> getSubTopics() {
         return subTopics;
     }
 
-    public void setSubTopics(ObservableList<NoteSubTopic> subTopics) {
-        this.subTopics = subTopics;
+    public ObservableList<NoteTopic> getNoteTopics() {
+        return noteTopics;
     }
+
+//    public void setSubTopics(ObservableList<NoteSubTopic> subTopics) {
+//        this.subTopics = subTopics;
+//    }
 
     public NoteSubTopic getSelectedSubTopic() {
         return selectedSubTopic.get();
     }
+    public NoteSection getSelectedSubtopicSection() {
+        return selectedSubtopicSection.get();
+    }
 
+    public NoteTopic getSelectedTopic() {
+        return selectedTopic.get();
+    }
+
+    public Integer getSelectedTopicIndex() {
+        return selectedTopicIndex.get();
+    }
+
+    public NoteSection getSelectedSection() {
+        return selectedSection.get();
+    }
+
+    public SimpleObjectProperty<NoteTopic> selectedTopicProperty() {
+        return selectedTopic;
+    }
     public SimpleObjectProperty<NoteSubTopic> selectedSubTopicProperty() {
         return selectedSubTopic;
     }
 
+    public SimpleObjectProperty<NoteSection> selectedSubtopicSectionProperty() {
+        return selectedSubtopicSection;
+    }
+
+    public SimpleObjectProperty<Integer> selectedTopicIndexProperty() {
+        return selectedTopicIndex;
+    }
+
+    public void setSelectedTopic(NoteTopic selectedTopic) {
+        this.selectedTopic.set(selectedTopic);
+    }
+
     public void setSelectedSubTopic(NoteSubTopic selectedSubTopic) {
         this.selectedSubTopic.set(selectedSubTopic);
+    }
+
+    public void setSelectedSubtopicSection(NoteSection selectedSubTopicSection) {
+        this.selectedSubtopicSection.set(selectedSubTopicSection);
+    }
+
+    public void setSelectedTopicIndex(Integer selectedTopicIndex) {
+        this.selectedTopicIndex.set(selectedTopicIndex);
     }
 
     public HashMap<Integer, ObservableList<Section>> getSubTopicSections() {
@@ -123,8 +199,11 @@ public class NotesScreenVM implements ViewModel {
         this.subTopicSections = subTopicSections;
     }
 
+    public UserData getUser() {
+        return userData;
+    }
 
-//    public void addNote(Section selectedSection, String note) {
+    //    public void addNote(Section selectedSection, String note) {
 //
 //        boolean noted = false;
 //
@@ -161,10 +240,17 @@ public class NotesScreenVM implements ViewModel {
         return noteSections;
     }
 
-    public ObjectiveQuestion getQuestion(int yearId, int questionNum) {
-        return noteSubjectQuestions.stream().filter(objectiveQuestion ->
-            objectiveQuestion.getYearId() == yearId && objectiveQuestion.getQuestionNumber() == questionNum
-        ).collect(Collectors.toList()).get(0);
+    public NoteSection getNoteSubtopicSection(NoteSubTopic subTopic) {
+//        System.out.println(TAG + "getNoteSubtopicSection Subtopic Id -> " + subTopic.getId());
+//        System.out.println(TAG + "getNoteSubtopicSection selectedTopic Id -> " + selectedTopic.get().getId());
+        return noteSections.get(selectedTopic.get().getId()).stream().filter(section -> section.getSubtopicId() == subTopic.getId()).toList().get(0);
+    }
+
+    public ObjectiveQuestion getQuestion(int subjectId, int yearId, int questionNum) {
+        return ObjectiveQuestionDao.getNoteCBTQuestion(subjectId, yearId, questionNum);
+//        return noteSubjectQuestions.stream().filter(objectiveQuestion ->
+//                objectiveQuestion.getYearId() == yearId && objectiveQuestion.getQuestionNumber() == questionNum
+//        ).toList().get(0);
     }
 
     private int getPQSubjectId(int noteSubjectId) {
